renaming ecs script and region variable

--- a/.sample.env
+++ b/.sample.env
@@ -1,5 +1,6 @@
 PROJECT_NAME=myproject
-REGION=us-east-1
+AWS_ACCOUNT_ID=1234567890123
+AWS_REGION=us-east-1
 ENV=dev
 APP=staging
 CONTAINER=django
