adding support for multiple stacks per project

--- a/.sample.env
+++ b/.sample.env
@@ -1,6 +1,7 @@
 PROJECT_NAME=myproject
 AWS_ACCOUNT_ID=1234567890123
 AWS_REGION=us-east-1
+STACK=myawesomestack
 ENV=dev
 APP=staging
 CONTAINER=django
